--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "description": "IMAD 2016 course app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "coderunner09",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
     "morgan": "^1.7.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/coderunner09/imad-app-v2.git"
+  },
+  "keywords": [
+    "app"
+  ],
+  "bugs": {
+    "url": "https://github.com/coderunner09/imad-app-v2/issues"
+  },
+  "homepage": "https://github.com/coderunner09/imad-app-v2#readme"
 }
